--- a/index.html
+++ b/index.html
@@ -14,13 +14,6 @@
 <body>
 <div class="header" id="navbar"><p class="header-name">Febin Sebastian Elayanithottathil</p>
 <p>Machine Learning Engineer, Front End Developer</p></div>
-<!--<section class="main-section">
-<img src="Images/febin.jpg"/>
-	<div class="box">
-		<h1><span>Hello;</span> I'm Febin Sebastian E 
-		<span class="type"></span> </h1>
-	</div>	
-</section>-->
 <section class="video-section">
 
         <h1><span>Hello;</span> I'm Febin 
@@ -37,11 +30,16 @@
 	<div class="color-overlay"></div>
 	<h2>About Me</h2>
 	<div class="description">
-		<p>A Bachelor of Computer Science and Engineering Professional with 3 plus years of IT experience in the area of 
-			frontend web development and application software. 
-			Currently pursuing Master studies (MSc) Communication, Media and Software Engineering from Hochschule Offenburg,Germany.</p>
-		<a class="download-cv" href="docs/CV_Febin.pdf" target="_blank">DOWNLOAD CV</a>
-	</div>
+		<div>
+			<p>A Bachelor of Computer Science and Engineering Professional with 3 plus years of IT experience in the area of 
+				frontend web development and application software. 
+				Currently pursuing Master studies (MSc) Communication, Media and Software Engineering from Hochschule Offenburg,Germany.</p>
+				<a class="download-cv" href="docs/CV_Febin.pdf" target="_blank">DOWNLOAD CV</a>
+		</div>
+		<div>
+			<img src="Images/febin.JPG" alt="" class="profile-image shape">
+		</div>
+		</div>
 	
 </section>
 <section class="education">
@@ -66,8 +64,14 @@
 <section class="employment">
 	<h2>EMPLOYMENT</h2>
 	<div class="list">
+		<p>PantaBio AG, Hauptstraße 25, 69117 Heidelberg, Germany </p>
+		<p><i class="fa fa-calendar"></i> October 2021 - Present</p>
+		<p>Software Engineer</p>
+		<p></p>
+	</div>
+	<div class="list">
 		<p>Institute for Machine Learning and Analytics (IMLA), Hochschule Offenburg, Germany </p>
-		<p><i class="fa fa-calendar"></i> December 2020 - Present</p>
+		<p><i class="fa fa-calendar"></i> December 2020 - August 2021</p>
 		<p>Machine Learning Engineer</p>
 		<p></p>
 	</div>
@@ -178,7 +182,7 @@ Successfully completed Industry Readiness Program (IRP) at Spaneos Software Solu
 			</div>
 			<div>
 				<i class="fa fa-location-arrow"></i>
-				<p>jagerpfad 8, 77656 Offenburg</p>
+				<p>Schmitthennerstraße 57A, 69124 Heidelberg</p>
 			</div>
 			<div class="social-media">
 			<a href="https://github.com/febinsebastian" target="_blank"><i class="fa fa-github"></i></a>
